<resources>
    <string name="app_name">TaskInAppsSquer</string>
    <string name="show_name">Show Name</string>
    <string name="myname">islam Ragab</string>
    <string name="any">The user role determines the permissions that the SDK grants to a user, such as permission to send local streams, receive remote streams, and push streams to a CDN address. A live-streaming channel has two user roles: host and audience. A host can both send and receive streams, but an audience member can only receive stream. The default role is audience.</string>
    <string name="islam_ragab">Islam Ragab</string>
    <string name="wednesday_18_40_pm">wednesday - 18:40 PM</string>
    <string name="share">Share</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="price_eg">Price EG</string>
    <string name="manga">Manga</string>
    <string name="item">item</string>
    <string name="task_one">Task One</string>
    <string name="mainftasktwo">Task Two</string>
    <string name="task_three">Task Three</string>

</resources>