<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    >

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="200dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/imag"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            app:cardBackgroundColor="#FFF"
            android:foregroundGravity="center"
            app:cardCornerRadius="90dp">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardBackgroundColor="#FFF"
                app:cardCornerRadius="90dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/item"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_sun" />
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imag"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:paddingStart="5dp"
            android:gravity="center"
            android:paddingEnd="0dp"
            android:text="@string/manga"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/itemprice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemName"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/price_eg"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:textStyle="bold"
            />

    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>